tests/NormalTests/paczka1/small_fuzzy/35728587.err
Error in line 2: YWTjRKe S171 181,0
Error in line 7: sZVbSwrWaD A381 19,6
